Page CV : Correction alignement entreprises dans 'btnCollapse'

--- a/src/components/collapse/index.css
+++ b/src/components/collapse/index.css
@@ -39,8 +39,7 @@
   align-items: center;
 }
 .logoCompany {
-  width: 3rem;
-  padding: 0.4%;
+  width: 2.8125rem;
   margin-right: 0rem;
 }
 .logoCompany1 {
@@ -129,20 +128,27 @@ p.placeCollapse {
   }
 }
 /* Fin version Mobile jusqu'à 529px*/
-@media all and (min-width: 729px) and (max-width: 768px) {
+
+/* Début version Ecrans de 729px jusqu'à 768px*/
+@media all and (min-width: 720px) and (max-width: 768px) {
   .company0,
   .company4,
   .company5 {
-    padding-right: 18%;
+    padding-right: 17%;
   }
 }
+/* Fin version Ecrans de 729px jusqu'à 768px*/
+
+/* Début version Ecrans de 769px jusqu'à 908px*/
 @media all and (min-width: 769px) and (max-width: 908px) {
   .company0,
   .company4,
   .company5 {
-    padding-right: 23%;
+    padding-right: 25%;
   }
 }
+/* Fin version Ecrans de 769px jusqu'à 908px*/
+
 /* Début version Mobile de 530px jusqu'à 768px*/
 @media all and (min-width: 530px) and (max-width: 768px) {
   .btnCollapse {
@@ -190,10 +196,10 @@ p.placeCollapse {
   }
 }
 /* Début version Ecrans de 1025px jusqu'à 1263px*/
-@media all and (min-width: 1025px) and (max-width: 1263px) {
+@media all and (min-width: 1025px) and (max-width: 1260px) {
   .company0,
   .company4,
   .company5 {
-    padding-right: 22.5%;
+    padding-right: 22%;
   }
 }
